支持配置STMP
